--- a/projeto/index.html
+++ b/projeto/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+<div class="menu">
+    <div class="itens_menu">
 
     <div class="botao">    
         <p> <a href="pagina2.html"> pagina 2 </a></p>     
@@ -24,7 +26,8 @@
     <div class="botao">
     <p> <a href="pagina5.html"> pagina 5 </a></p>
     </div>
+</div>
 
-
+</div>
 </body>
 </html>
